Pass "--enable-preview" flag to javac front-end.
PiperOrigin-RevId: 381281142